--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "<emre.kul@trendyol.com>",
   "license": "MIT",
   "devDependencies": {
+    "ts-loader": "^5.4.5",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0"
