jest up and running

--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "license": "MIT",
   "scripts": {
     "build": "TS_NODE_FILES=true node_modules/.bin/tsc && node_modules/.bin/webpack",
-    "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 jest --coverage --silent",
-    "test:watch": "NODE_TLS_REJECT_UNAUTHORIZED=0 jest --coverage --watch --silent --runInBand",
+    "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 node_modules/.bin/jest --coverage --silent",
+    "test:watch": "NODE_TLS_REJECT_UNAUTHORIZED=0 node_modules/.bin/jest --coverage --watch --silent --runInBand",
     "lint": "./node_modules/.bin/tslint -p ./tsconfig.json",
     "lint:fix": "./node_modules/.bin/tslint -p ./tsconfig.json --fix"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/jsdom": "^12.2.3",
     "@types/faker": "^4.1.5",
-    "@types/mocha": "^5.2.6",
+    "@types/jest": "^24.0.13",
+    "@types/jsdom": "^12.2.3",
     "@types/sinon": "^7.0.11",
     "chai": "^4.2.0",
     "faker": "^4.1.0",
+    "jest": "^24.8.0",
     "jsdom": "^15.0.0",
-    "mocha": "^6.1.4",
     "sinon": "^7.3.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^5.4.5",
