--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           paths:
             - node_modules
           key: dependencies-{{ checksum "package.json" }}
-      - run: npm run test:ci
+      - run: npm run test
       - store_artifacts:
           path: coverage
       - codecov/upload:
