--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "puzzle-lib",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": "<emre.kul@trendyol.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/puzzle-js/puzzle-lib"
+  },
   "scripts": {
     "build": "TS_NODE_FILES=true node_modules/.bin/webpack --config webpack.config.js",
     "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 node_modules/.bin/jest --coverage --silent",
