--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@puzzle-js/lib",
-  "version": "1.1.2",
+  "name": "@puzzle-microfrontends/lib",
+  "version": "1.1.1",
   "author": "<emre.kul@trendyol.com>",
   "license": "MIT",
   "repository": {
