--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puzzle-microfrontends-lib",
+  "name": "@puzzle-js/lib",
   "version": "1.0.0",
   "author": "<emre.kul@trendyol.com>",
   "license": "MIT",
