--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@puzzle-js/lib",
-  "version": "1.0.0",
+  "name": "@puzzle-js/client-lib",
+  "version": "1.0.1",
   "author": "<emre.kul@trendyol.com>",
   "license": "MIT",
   "repository": {
