lib script scope update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,8 @@ jobs:
             - package.json
             - package-lock.json
             - .npmignore
-            - dist
+            - public
+            - src
   deploy:
     <<: *defaults
     steps:
