--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@puzzle-js/client-lib",
-  "version": "1.0.5",
+  "main": "public/puzzle.min.js",
+  "version": "1.0.6",
   "author": "<emre.kul@trendyol.com>",
   "license": "MIT",
   "repository": {
