--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/faker": "^4.1.5",
+    "@types/gun": "^0.9.2",
     "@types/jest": "^24.0.13",
     "@types/jsdom": "^12.2.3",
     "@types/sinon": "^7.0.11",
