--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@puzzle-js/client-lib",
   "main": "dist/index.js",
-  "version": "1.8.2",
+  "version": "1.8.3",
   "author": "<emre.kul@trendyol.com>",
   "license": "MIT",
   "repository": {
@@ -28,10 +28,10 @@
     "jsdom": "^15.0.0",
     "sinon": "^7.3.2",
     "ts-jest": "^25.5.1",
-    "ts-loader": "^5.4.5",
+    "ts-loader": "^9.4.4",
     "tslint": "^5.16.0",
-    "typescript": "^3.4.5",
-    "webpack": "5.88.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.88.2",
     "webpack-cli": "5.1.4"
   }
 }
